--- a/Nginx-Gateway-Backend-Log-HTML/pvc.yaml
+++ b/Nginx-Gateway-Backend-Log-HTML/pvc.yaml
@@ -1,11 +1,10 @@
 apiVersion: v1
-kind: PersistentVolume
+kind: PersistentVolumeClaim
 metadata:
-  name: nginx-logs-pv
+  name: nginx-logs-pvc
 spec:
-  capacity:
-    storage: 1Gi
   accessModes:
     - ReadWriteOnce
-  hostPath:
-    path: /mnt/data/nginx-logs
+  resources:
+    requests:
+      storage: 1Gi
